--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,13 @@
     </div>
 
     <div class="right">
-      <span><a href="/login">login</a></span>
-      <span><a href="/users/new">signup</a></span>
+      <% if session[:username] %>
+        <span>hi, <%= session[:username] %> </span>
+        <span><a class="logout-link" href="/">logout</a></span>
+      <% else %>
+        <span><a href="/login">login</a></span>
+        <span><a href="/users/new">signup</a></span>
+      <% end %>
     </div>
   </div>
 <%= yield %>
