--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
-<h2>LOGIN</h2>
-<%= form_tag("/sessions/login", method: "post") do %>
+<h2>SIGN UP, sucker</h2>
+<%= form_tag("/users", method: "post") do %>
  <%= label_tag(:username, "username") %>
   <%= text_field_tag(:username) %>
   <%= label_tag(:password, "password") %>
   <%= password_field_tag(:password) %>
-  <%= submit_tag("login") %>
+  <%= submit_tag("register") %>
 <% end %>
